05_monitoring/manifests/monitoring/monitoring_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-server
  labels:
    app: prometheus-server
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus-server.monitoring
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.monitoring
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
